...
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

    <Button
            android:id="@+id/btnCurrentJob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onEnterCurrentJobClicked"
            android:text="@string/enter_current_job" />

...
