<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_compare"
            android:icon="@drawable/ic_compare_arrows"
            app:showAsAction="always"
            android:title="@string/compare" />
    <item
            android:id="@+id/action_cancel"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_menu_cancel"
            android:title="@string/cancel" />

</menu>
