...
                android:padding="5dp"
                android:gravity="center_vertical"
                android:src="@android:drawable/btn_star_big_on"
                android:layout_margin="10dp" />

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/ivJobType"
                android:text="@string/title"
...
